# netdevops-survey

./: README.md  pyproject.toml  test.ipynb
docs/: report_2019.md
lib/: graph.py  query.py  schema.py
netdevops_survey/: cli.py  graph.py  manage_db.py  query.py  schema.py
questionnaire/2016/: intro.md  questions.yaml
questionnaire/2019/: questions.yaml
questionnaire/2020/: intro.md  questions.yaml
reports/: 2016.md  2019.md  2020.md
results/: 2016.tsv  2019.tsv  2020.tsv  CHANGELOG.md  netdevops_survey.sqlite3
tools/: analyze_tsv.py  count_responses_tsv.py  generate_graphs.py  manage_db.py  schema.py
